# Breakout

./: CMakeLists.txt  README.md  Readme.md
Glitter/Headers/: Ball.hpp  Game.hpp  GameLevel.hpp  GameObject.hpp  Mesh.hpp  ParticleGenerator.hpp  PostProcessor.hpp  PowerUp.hpp  ResourceManager.hpp  Shader.hpp  SpriteRenderer.hpp  TextRenderer.hpp  Texture2D.hpp
Glitter/Resource/: particles.frag  particles.vert  post_processor.frag  post_processor.vert
Glitter/Sources/: Ball.cpp  Game.cpp  GameLevel.cpp  GameObject.cpp  Mesh.cpp  ParticleGenerator.cpp  PostProcessor.cpp  PowerUp.cpp  ResourceManager.cpp  Shader.cpp  SpriteRenderer.cpp  TextRenderer.cpp  Texture2D.cpp  main.cpp
Samples/: mesh.cpp
