cmake_minimum_required(VERSION 3.0)
project(Glitter)

option(GLFW_BUILD_DOCS OFF)
option(GLFW_BUILD_EXAMPLES OFF)
option(GLFW_BUILD_TESTS OFF)
add_subdirectory(Glitter/Vendor/glfw)

option(ASSIMP_BUILD_ASSIMP_TOOLS OFF)
option(ASSIMP_BUILD_SAMPLES OFF)
option(ASSIMP_BUILD_TESTS OFF)
add_subdirectory(Glitter/Vendor/assimp)

option(BUILD_BULLET2_DEMOS OFF)
option(BUILD_CPU_DEMOS OFF)
option(BUILD_EXTRAS OFF)
option(BUILD_OPENGL3_DEMOS OFF)
option(BUILD_UNIT_TESTS OFF)
add_subdirectory(Glitter/Vendor/bullet)

if(MSVC)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W4")
else()
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wpedantic -std=c++11")
    if(NOT WIN32)
        set(GLAD_LIBRARIES dl)
    endif()
endif()

include_directories(Glitter/Headers/
                    Glitter/Vendor/assimp/include/
                    Glitter/Vendor/bullet/src/
                    Glitter/Vendor/glad/include/
                    Glitter/Vendor/glfw/include/
                    Glitter/Vendor/glm/
                    Glitter/Vendor/irrKlang/include/
                    Glitter/Vendor/stb/)

include_directories(/usr/local/include/freetype2/)

file(GLOB VENDORS_SOURCES Glitter/Vendor/glad/src/glad.c)
file(GLOB PROJECT_HEADERS Glitter/Headers/*.hpp)
file(GLOB PROJECT_SOURCES Glitter/Sources/*.cpp)
file(GLOB PROJECT_SHADERS Glitter/Shaders/*.comp
                          Glitter/Shaders/*.frag
                          Glitter/Shaders/*.geom
                          Glitter/Shaders/*.vert)
file(GLOB PROJECT_CONFIGS CMakeLists.txt
                          Readme.md
                         .gitattributes
                         .gitignore
                         .gitmodules)

source_group("Headers" FILES ${PROJECT_HEADERS})
source_group("Shaders" FILES ${PROJECT_SHADERS})
source_group("Sources" FILES ${PROJECT_SOURCES})
source_group("Vendors" FILES ${VENDORS_SOURCES})

link_directories("/usr/local/lib")

add_definitions(-DGLFW_INCLUDE_NONE
                -DPROJECT_SOURCE_DIR=\"${PROJECT_SOURCE_DIR}\")
add_executable(${PROJECT_NAME} ${PROJECT_SOURCES} ${PROJECT_HEADERS}
                               ${PROJECT_SHADERS} ${PROJECT_CONFIGS}
                               ${VENDORS_SOURCES} Glitter/Sources/Mesh.cpp Glitter/Headers/Mesh.hpp Glitter/Sources/SpriteRenderer.cpp Glitter/Headers/SpriteRenderer.hpp Glitter/Sources/Shader.cpp Glitter/Headers/Shader.hpp Glitter/Sources/Texture2D.cpp Glitter/Headers/Texture2D.hpp Glitter/Sources/GameObject.cpp Glitter/Headers/GameObject.hpp Glitter/Sources/GameLevel.cpp Glitter/Headers/GameLevel.hpp Glitter/Sources/Game.cpp Glitter/Headers/Game.hpp Glitter/Sources/ResourceManager.cpp Glitter/Headers/ResourceManager.hpp Glitter/Sources/Ball.cpp Glitter/Headers/Ball.hpp Glitter/Sources/ParticleGenerator.cpp Glitter/Headers/ParticleGenerator.hpp Glitter/Sources/PostProcessor.cpp Glitter/Headers/PostProcessor.hpp Glitter/Sources/PowerUp.cpp Glitter/Headers/PowerUp.hpp Glitter/Sources/TextRenderer.cpp Glitter/Headers/TextRenderer.hpp)
target_link_libraries(${PROJECT_NAME} assimp glfw  irrklang freetype
                      ${GLFW_LIBRARIES} ${GLAD_LIBRARIES}
                      BulletDynamics BulletCollision LinearMath)
set_target_properties(${PROJECT_NAME} PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${PROJECT_NAME})
